[package]
name = "redis-clone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.28", features = ["derive"] }
env_logger = "0.11.6"
futures = {version = "0.3.31", default-features = true}
log = "0.4.25"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
true = "0.1.0"
